[tool.poetry]
name = "curlify2"
version = "2.0.0"
description = "Library to convert python requests and httpx object to curl command."
authors = ["Marcus Pereira <marcus@negros.dev>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/marcuxyz/curlify2"
homepage = "https://github.com/marcuxyz/curlify2"
keywords = ["python", "curl", "requests", "curlify", "httpx", "convert to curl"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
pytest = "^7.3.1"
black = ">=21.7b0"
pytest-httpx = "^0.22.0"
responses = "^0.23.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
